pkg/main/default/objects/EnvelopeConfiguration__c/EnvelopeConfiguration__c.object-meta.xml
<CustomObject>
    <label>DocuSign Envelope Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>