pkg/main/default/objects/EnvelopeConfiguration__c/fields/AddSourceDocuments__c.field-meta.xml
<CustomField>
    <fullName>AddSourceDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Salesforce source documents</label>
    <type>Checkbox</type>
</CustomField>