pkg/main/default/objects/EnvelopeConfiguration__c/fields/AddSourceRecipients__c.field-meta.xml
<CustomField>
    <fullName>AddSourceRecipients__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add Salesforce source recipients</label>
    <type>Checkbox</type>
</CustomField>