pkg/main/default/objects/EnvelopeConfiguration__c/fields/CustomFields__c.field-meta.xml
<CustomField>
	<fullName>CustomFields__c</fullName>
	<label>Custom Fields</label>
	<length>131072</length>
	<type>LongTextArea</type>
</CustomField>