pkg/main/default/objects/EnvelopeConfiguration__c/fields/DocuSignId__c.field-meta.xml
<CustomField>
	<fullName>DocuSignId__c</fullName>
	<externalId>true</externalId>
	<label>DocuSign Template ID</label>
	<length>36</length>
	<type>Text</type>
	<unique>true</unique>
</CustomField>