pkg/main/default/objects/EnvelopeConfiguration__c/fields/EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage__c</fullName>
    <label>Email message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>