pkg/main/default/objects/EnvelopeConfiguration__c/fields/EmailSubject__c.field-meta.xml
<CustomField>
	<fullName>EmailSubject__c</fullName>
	<description>Email Subject</description>
	<label>Email subject</label>
	<length>255</length>
	<type>Text</type>
</CustomField>