pkg/main/default/objects/EnvelopeConfiguration__c/fields/ExpireAfterDays__c.field-meta.xml
<CustomField>
    <fullName>ExpireAfterDays__c</fullName>
    <label>Expire/void envelope in N day(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>