pkg/main/default/objects/EnvelopeConfiguration__c/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expire/void envelope</label>
    <type>Checkbox</type>
</CustomField>