pkg/main/default/objects/EnvelopeConfiguration__c/fields/ExpireWarnDays__c.field-meta.xml
<CustomField>
    <fullName>ExpireWarnDays__c</fullName>
    <label>Warn of expiration in N day(s) prior</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>