pkg/main/default/objects/EnvelopeConfiguration__c/fields/IsDraft__c.field-meta.xml
<CustomField>
	<fullName>IsDraft__c</fullName>
	<defaultValue>true</defaultValue>
	<label>Is Draft</label>
	<type>Checkbox</type>
</CustomField>