pkg/main/default/objects/EnvelopeConfiguration__c/fields/MergeFields__c.field-meta.xml
<CustomField>
	<fullName>MergeFields__c</fullName>
	<label>Merge Fields</label>
	<length>131072</length>
	<type>LongTextArea</type>
</CustomField>