pkg/main/default/objects/EnvelopeConfiguration__c/fields/Notifications__c.field-meta.xml
<CustomField>
	<fullName>Notifications__c</fullName>
	<label>Notifications</label>
	<length>131072</length>
	<type>LongTextArea</type>
</CustomField>