pkg/main/default/objects/EnvelopeConfiguration__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>Object type</label>
    <type>TextArea</type>
</CustomField>