pkg/main/default/objects/EnvelopeConfiguration__c/fields/Options__c.field-meta.xml
<CustomField>
	<fullName>Options__c</fullName>
	<label>Options</label>
	<length>131072</length>
	<type>LongTextArea</type>
</CustomField>