pkg/main/default/objects/EnvelopeConfiguration__c/fields/Remind__c.field-meta.xml
<CustomField>
    <fullName>Remind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remind signers via email</label>
    <type>Checkbox</type>
</CustomField>