pkg/main/default/objects/EnvelopeConfiguration__c/fields/RemindAfterDays__c.field-meta.xml
<CustomField>
    <fullName>RemindAfterDays__c</fullName>
    <label>Send reminder in N day(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>