pkg/main/default/objects/EnvelopeConfiguration__c/fields/RemindFrequencyDays__c.field-meta.xml
<CustomField>
    <fullName>RemindFrequencyDays__c</fullName>
    <label>Remind every N day(s) until complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>