pkg/main/default/objects/EnvelopeConfiguration__c/fields/SenderPermissions__c.field-meta.xml
<CustomField>
	<fullName>SenderPermissions__c</fullName>
	<label>Sender Permissions</label>
	<length>131072</length>
	<type>LongTextArea</type>
</CustomField>