pkg/main/default/objects/EnvelopeConfiguration__c/fields/ShowChatterSettings__c.field-meta.xml
<CustomField>
    <fullName>ShowChatterSettings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Chatter settings</label>
    <type>Checkbox</type>
</CustomField>