pkg/main/default/objects/EnvelopeConfiguration__c/fields/ShowEmailMessage__c.field-meta.xml
<CustomField>
    <fullName>ShowEmailMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show email message</label>
    <type>Checkbox</type>
</CustomField>