pkg/main/default/objects/EnvelopeConfiguration__c/fields/ShowEmailSubject__c.field-meta.xml
<CustomField>
    <fullName>ShowEmailSubject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show email subject</label>
    <type>Checkbox</type>
</CustomField>