pkg/main/default/objects/EnvelopeConfiguration__c/fields/ShowRemindExpire__c.field-meta.xml
<CustomField>
    <fullName>ShowRemindExpire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show remind and expire settings</label>
    <type>Checkbox</type>
</CustomField>