pkg/main/default/objects/EnvelopeConfiguration__c/fields/ShowSendButton__c.field-meta.xml
<CustomField>
    <fullName>ShowSendButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show send button</label>
    <type>Checkbox</type>
</CustomField>