pkg/main/default/objects/EnvelopeConfiguration__c/fields/ShowTagButton__c.field-meta.xml
<CustomField>
    <fullName>ShowTagButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show tag button</label>
    <type>Checkbox</type>
</CustomField>