pkg/main/default/objects/EnvelopeConfiguration__c/fields/SourceObject__c.field-meta.xml
<CustomField>
	<fullName>SourceObject__c</fullName>
	<label>Source Object</label>
	<length>255</length>
	<type>Text</type>
</CustomField>