pkg/main/default/objects/EnvelopeConfiguration__c/listViews/All.listView-meta.xml
<ListView>
	<columns>NAME</columns>
	<columns>SourceObject__c</columns>
	<columns>IsDraft__c</columns>
	<columns>CREATED_DATE</columns>
	<fullName>All</fullName>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>